<resources>
    <string name="app_name">TrafficSigns</string>
    <string name="splash_title">Traffic Signs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="traffic_signs">Traffic Signs</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_button">Back button</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="grid">Grid</string>
    <string name="sing_in">Sing In</string>
    <string name="sign_up">Sign Up</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="years">years</string>
    <string name="save">Save</string>
    <string name="_0_0">0.0</string>
    <string name="average_score">Average score:</string>
    <string name="maximum_score">Maximum score:</string>
    <string name="known_signs">Known signs</string>
    <string name="solve_test">Solve test</string>
    <string name="sign_quiz">Sign Quiz</string>
    <string name="traffic_quiz">Traffic Quiz</string>
    <string name="quiz_description">Hello, this is a little quiz for earning some knowledge about traffic signs. I hope you will enjoy it. :) \n You will get images from signs randomly and you have to select the right one!</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz image</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="quiz">Quiz</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="more">More..</string>
    <string name="here_can_be_added_to_the_known_signs">Here can be added to the known signs.</string>
    <string name="description_imgae">Description imgae</string>
    <string name="traffic_sgin_name_image">Traffic Sgin name image</string>
    <string name="more_link_image_button">More link image button</string>
    <string name="go_to_main_screen_button">Go to main screen button</string>
    <string name="go_to_home">Go to home</string>
    <string name="menu_image_button">Menu image button</string>
    <string name="add_photo_form_gallery">Add photo form gallery</string>
    <string name="camera2">Camera2</string>
    <string name="photo">Photo</string>
    <string name="live">Live</string>
</resources>