<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_accessibility_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/knownSigns"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/known_signs" />

    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_baseline_bubble_chart_24"
        android:title="@string/quiz" />

    <item android:id="@+id/neuralNetworkFragment"
        android:title="@string/photo"
        android:icon="@drawable/ic_baseline_photo_camera_24"/>

    <item android:id="@+id/cameraNeural"
        android:title="@string/live"
        android:icon="@drawable/ic_baseline_live_tv_24"/>


<!--    <item android:id="@+id/settingsFragment"-->
<!--        android:title="@string/settings" />-->
</menu>