<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.fragment.profile.ProfileFragment"
        android:background="@color/blue_gray_200">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:foreground="@xml/profile_pictureshape"
            android:contentDescription="@string/add_photo_form_gallery"
            android:scaleType="centerCrop"
            android:src="@color/blue_gray_600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars[1]" />

        <ImageButton
            android:id="@+id/create_picture_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintEnd_toStartOf="@+id/gallery_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            tools:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

        <ImageButton
            android:id="@+id/gallery_picture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"
            app:layout_constraintStart_toEndOf="@id/create_picture_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toStartOf="@+id/gallery_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_picture_button" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@xml/profile_buttonshape_save"
            app:layout_constraintBottom_toBottomOf="@+id/name_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/name_edit_text"
            app:layout_constraintTop_toTopOf="@+id/name_edit_text" />

        <TextView
            android:id="@+id/average_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/average_score"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/max_score_textview"
            app:layout_constraintEnd_toStartOf="@id/average_score_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <TextView
            android:id="@+id/average_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/average_score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/average_score"
            app:layout_constraintTop_toTopOf="@+id/average_score" />

        <TextView
            android:id="@+id/max_score_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maximum_score"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/known_signs"
            app:layout_constraintEnd_toStartOf="@id/max_score_value"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/average_score" />

        <TextView
            android:id="@+id/max_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_0"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/max_score_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/max_score_textview"
            app:layout_constraintTop_toTopOf="@+id/max_score_textview" />

        <Button
            android:id="@+id/known_signs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/known_signs"
            android:textColor="@color/white"
            android:background="@xml/profile_buttonshape"
            app:layout_constraintBottom_toBottomOf="@+id/test_button"
            app:layout_constraintEnd_toStartOf="@+id/test_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/test_button" />

        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_test"
            android:background="@xml/profile_buttonshape"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/known_signs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_score_textview" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>